--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,11 @@
   <meta charSet="utf-8"></meta>
   <title>{{title}}</title>
   <link rel="stylesheet" href="semantic.min.css" media="screen" title="no title" charset="utf-8"></link>
-  <link rel="stylesheet" href="styles.css" media="screen" title="no title" charset="utf-8"></link>
 
 </head>
 <body>
 
-  <section class='app'>{{message}}</section>
+  <div id='root'>{{message}}</div>
 
 </body>
 
